--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
   </head>
   <body class="body">
     <h1 class="title">SNAKE II</h1>
-    <div class="grid"></div>
-    <div class="right">
-    <div class="score">score: 0</div>
-    <h1 class="game-over">GAME OVER</h1>
-    <div class="reset">
-      <button>start over</button>
+    <div class="grid">
     </div>
-  </div>
+    <div class="right">
+      <div class="score">
+        score: 0
+      </div>
+      <h1 class="game-over">GAME OVER</h1>
+      <div class="reset">
+        <button>start over</button>
+      </div>
+    </div>
   </body>
 </html>
