local storage added for high scores

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <div class="grid">
     </div>
     <div class="right">
+      <div class="hi-scores">
+        hi-scores
+      </div>
       <div class="score">
         score: 0
       </div>
