--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </div>
     <div class="right">
       <div class="hi-scores">
-        hi-scores
+        <div class="hi-title">hi-scores</div>
+        <div class="positions">
+        <div>first</div>
+        <div>second</div>
+        <div>third</div>
+      </div>
+        <div class="each-score"></div>
       </div>
       <div class="score">
         score: 0
