--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     </div>
     <div class="right">
       <div class="hi-scores">
-        <div class="hi-title">hi-scores</div>
-        <div class="positions">
+        <div class="hi-title">hi-score</div>
+        <!-- <div class="positions">
         <div>first</div>
         <div>second</div>
         <div>third</div>
-      </div>
+      </div> -->
         <div class="each-score"></div>
       </div>
       <div class="score">
